<resources>
    <string name="app_name">PUM24</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_form">Form</string>
    <string name="menu_constraint">Constraint Layout</string>
    <string name="menu_movies">Movies</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
    <string name="birth_date">Birth Date</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="favourite_movies">Favourite Movies:</string>
    <string name="add_movie">Add movie</string>
    <string name="test">TEST</string>
</resources>