<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pum24.ui.form.FormFragment"
        android:label="@string/menu_form"
        tools:layout="@layout/fragment_form" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pum24.ui.constraint.ConstraintFragment"
        android:label="@string/menu_constraint"
        tools:layout="@layout/fragment_constraint" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pum24.ui.movies.MoviesFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/nav_addmovie"
        android:name="com.example.pum24.ui.addMovie.AddMovieFragment"
        android:label="@string/add_movie"
        tools:layout="@layout/fragment_add_movie" />
</navigation>